--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Kamran | AI/ML Engineer</title>
+  <title>Muhammad Kamran | AI/ML Engineer</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -12,15 +12,7 @@
   <header class="hero">
     <div class="container">
       <div class="hero-content">
-        <img id="photoPreview" src="document.addEventListener('DOMContentLoaded', () => {
-  const printBtn = document.getElementById('printBtn');
-
-  // Print/Save as PDF
-  printBtn.addEventListener('click', () => {
-    window.print();
-  });
-});
-" alt="Muhammad Kamran" class="profile-img">
+        <img id="photoPreview" src="images/kamran.png" alt="Muhammad Kamran" class="profile-img">
         <h1>Muhammad Kamran</h1>
         <p class="tagline">AI / ML Engineer | Deep Learning | Generative AI Enthusiast</p>
         <p class="contact">
