--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="hero-content">
         <img id="photoPreview" src="images/kamran.jpg" alt="Muhammad Kamran" class="profile-img">
-        <h1>Kamran</h1>
+        <h1>Muhammad Kamran</h1>
         <p class="tagline">AI / ML Engineer | Deep Learning | Generative AI Enthusiast</p>
         <p class="contact">
           <a href="mailto:kamran32203@gmail.com">kamran32203@gmail.com</a> | 
