--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <header class="hero">
     <div class="container">
       <div class="hero-content">
-        <img id="photoPreview" src="images/kamran.jpg" alt="Muhammad Kamran" class="profile-img">
+        <div class="profile-image-wrapper">
+      <img src="images/kamran.jpg" alt="Muhammad Kamran" class="profile-img">
+    </div>
         <h1>Muhammad Kamran</h1>
         <p class="tagline">AI / ML Engineer | Deep Learning | Generative AI Enthusiast</p>
         <p class="contact">
