--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <!-- Hero / Header -->
+  <!-- Header / Hero Section -->
   <header class="hero">
-    <div class="container hero-content">
-      <div class="profile-image-wrapper">
-        <img src="images/kamran.jpg" alt="Muhammad Kamran" class="profile-img">
+    <div class="container">
+      <div class="hero-content">
+        <img id="photoPreview" src="images/kamran.jpg" alt="Muhammad Kamran" class="profile-img">
+        <h1>Muhammad Kamran</h1>
+        <p class="tagline">AI / ML Engineer | Deep Learning | Generative AI Enthusiast</p>
+        <p class="contact">
+          <a href="mailto:kamran32203@gmail.com">kamran32203@gmail.com</a> | 
+          <a href="https://www.linkedin.com/in/muhammad-kamran-khalid/" target="_blank">LinkedIn</a>
+        </p>
+        <button id="printBtn" class="btn">Download Resume</button>
       </div>
-      <h1>Muhammad Kamran</h1>
-      <p class="tagline">AI / ML Engineer | Deep Learning | Generative AI Enthusiast</p>
-      <p class="contact">
-        <a href="mailto:kamran32203@gmail.com">kamran32203@gmail.com</a> |
-        <a href="https://www.linkedin.com/in/muhammad-kamran-khalid/" target="_blank">LinkedIn</a>
-      </p>
-      <button id="printBtn" class="btn">Download Resume</button>
     </div>
   </header>
 
@@ -30,7 +29,8 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        Hands-on AI/ML Engineer experienced in building ML/DL models for Computer Vision and NLP. Skilled in Python, TensorFlow, and Keras. Currently learning Generative AI with multiple projects in CV and NLP.
+        Hands-on AI/ML Engineer experienced in developing and evaluating ML/DL models for Computer Vision and NLP. 
+        Skilled in Python, TensorFlow, and Keras. Currently expanding expertise into Generative AI with multiple projects in CV and NLP.
       </p>
     </div>
   </section>
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <!-- Experience Section -->
+  <!-- Experience & Education -->
   <section class="experience">
     <div class="container">
       <h2>Experience</h2>
@@ -85,7 +85,6 @@
     </div>
   </section>
 
-  <!-- Education Section -->
   <section class="education">
     <div class="container">
       <h2>Education</h2>
