--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-container">
-                    <img src="images/kamran.jpg" alt="Muhammad Kamran - AI/ML Engineer" class="profile-image">
+                    <img src="images/kamran_new.jpg" alt="Muhammad Kamran - AI/ML Engineer" class="profile-image">
                     <div class="floating-elements">
                         <div class="floating-element"></div>
                         <div class="floating-element"></div>
