--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <span class="tag">Transfer Learning</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn btn-primary">Live Demo</a>
+                            <a href="https://bonefracturedetector-5j9nmfehchyuhybhqdnhgt.streamlit.app/" class="btn btn-primary">Live Demo</a>
                             <a href="#" class="btn btn-secondary">GitHub</a>
                         </div>
                     </div>
@@ -180,8 +180,8 @@
                             <span class="tag">TF-IDF</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn btn-primary">Live Demo</a>
-                            <a href="#" class="btn btn-secondary">GitHub</a>
+                            <a href="https://bxl2mwwgz3fv9yaq24crvg.streamlit.app/" class="btn btn-primary">Live Demo</a>
+                            <a href="https://github.com/muhammad-kamrankhalid/Movie" class="btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -197,8 +197,8 @@
                             <span class="tag">Web App</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn btn-primary">Live Demo</a>
-                            <a href="#" class="btn btn-secondary">GitHub</a>
+                            <a href="https://textsummarizer-xyitjk5pqvrhgrxznkdcbw.streamlit.app/" class="btn btn-primary">Live Demo</a>
+                            <a href="https://github.com/muhammad-kamrankhalid/textSummarizer" class="btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -214,8 +214,8 @@
                             <span class="tag">OpenCV</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn btn-primary">Live Demo</a>
-                            <a href="#" class="btn btn-secondary">GitHub</a>
+                            <a href="https://bonefracturedetector-5j9nmfehchyuhybhqdnhgt.streamlit.app/" class="btn btn-primary">Live Demo</a>
+                            <a href="https://github.com/muhammad-kamrankhalid/boneFractureDetector" class="btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
