--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <span class="contact-icon">💼</span>
                         <div>
                             <strong>LinkedIn:</strong><br>
-                            <a href="https://linkedin.com/in/muhammad-kamran-khalid/" target="_blank">linkedin.com/in/muhammad-kamran-khalid/</a>
+                            <a href="https://www.linkedin.com/in/muhammad-kamran-khalid/" target="_blank">linkedin.com/in/muhammad-kamran-khalid/</a>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -273,7 +273,7 @@
         <div class="container">
             <div class="social-links">
                 <a href="mailto:kamran32203@gmail.com" class="social-link" title="Email">📧</a>
-                <a href="https://linkedin.com/in/muhammad-kamran-khalid/" target="_blank" class="social-link" title="LinkedIn">💼</a>
+                <a href="https://www.linkedin.com/in/muhammad-kamran-khalid/" target="_blank" class="social-link" title="LinkedIn">💼</a>
                 
                 
             </div>
