--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="hero-content">
                 <h1>Muhammad Kamran</h1>
                 <p class="title">AI/ML Engineer</p>
-                <p class="subtitle">Generative AI • Deep Learning • End-to-End AI Products</p>
-                <p>AI/ML Engineer with hands-on experience in building intelligent solutions using Python, TensorFlow, PyTorch, and LangChain. Skilled in developing <b>production-ready AI applications</b>, including client-based chatbots, computer vision systems, and NLP tools. Currently focused on <b>Generative AI</b>, integrating LLMs, RAG pipelines, and modern deployment stacks to solve real-world problems.</p>
+                <p class="subtitle">Generative AI • Deep Learning • Machine Learning</p>
+                <p>AI/ML Engineer with hands-on experience in building intelligent solutions using Python, Pandas, Scikit-Learn, TensorFlow, PyTorch, LangChain and FastAPI. Skilled in developing <b>production-ready AI applications</b>, including client-based chatbots, computer vision systems, and NLP tools. Currently focused on <b>Generative AI</b>, integrating LLMs, RAG pipelines, and modern deployment stacks to solve real-world problems.</p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn btn-primary">View My Projects</a>
                     <a href="#contact" class="btn btn-secondary">Let's Connect</a>
