--- a/index.html
+++ b/index.html
@@ -228,6 +228,32 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-image">💪🤖</div>
+                    <div class="project-content">
+                        <h3>FitAI – AI-Powered Fitness Companion</h3>
+                        <p>
+                            Developed a full-stack AI fitness application with three core modules:
+                            <br>⚡ Chatbot: Built with FastAPI + LLM integration to answer fitness-related queries.
+                            <br>⚡ Recommender System: Personalized workout suggestions based on user goals (weight loss, muscle gain, endurance).
+                            <br>⚡ Computer Vision: Exercise posture correction using OpenCV and deep learning.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag ai-tag">FastAPI</span>
+                            <span class="tag">LangChain</span>
+                            <span class="tag">HuggingFace</span>
+                            <span class="tag">Computer Vision</span>
+                            <span class="tag">React.js</span>
+                            <span class="tag">Vercel</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://fitmind-ai-suite.vercel.app/" class="btn btn-primary" target="_blank">Live Demo</a>
+                            <a href="https://github.com/muhammad-kamrankhalid/fitness-ai" class="btn btn-secondary" target="_blank">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
